# containerd-wasm-shims

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: bootstrap.sh  devcontainer.json
.github/workflows/: build.yaml  ci.yaml  ci.yml  docker-build-push.yaml  release.yaml  release.yml
containerd-shim-lunatic/: Cargo.toml
containerd-shim-lunatic-v1/: Cargo.toml  Cross.toml  Dockerfile
containerd-shim-lunatic-v1/src/: common.rs  engine.rs  executor.rs  main.rs
containerd-shim-lunatic/src/: main.rs
containerd-shim-slight/: Cargo.toml  quickstart.md
containerd-shim-slight-v1/: Cargo.toml  Cross.toml  Dockerfile  quickstart.md  readme.md
containerd-shim-slight-v1/src/: executor.rs  main.rs
containerd-shim-slight/src/: main.rs
containerd-shim-spin/: Cargo.toml  quickstart.md
containerd-shim-spin-v1/: Cargo.toml  Cross.toml  Dockerfile  quickstart.md
containerd-shim-spin-v1/src/: engine.rs  executor.rs  linux_executor.rs  loader.rs  main.rs  podio.rs
containerd-shim-spin/src/: engine.rs  main.rs
containerd-shim-wws/: Cargo.toml  quickstart.md
containerd-shim-wws-v1/: Cargo.toml  Cross.toml  Dockerfile  quickstart.md
containerd-shim-wws-v1/src/: executor.rs  main.rs
containerd-shim-wws/src/: engine.rs  main.rs
cross/: Dockerfile
deployments/: README.md
deployments/chat-workloads/: pv.group.yaml  pvc.group.yaml  runtime.yaml  workload.yaml
deployments/k3d/: DockerSetup.md  Dockerfile  Makefile  README.md  config.toml.tmpl
deployments/k3d/workload/: runtime.yaml  workload.yaml
deployments/k8s/: all-in-one-demo.yaml
deployments/workloads/: runtime.yaml  runtime.yml  workload.yaml
deployments/workloads/slight/: runtime.yaml  workload.yaml
images/lunatic/: Cargo.toml  Dockerfile
images/lunatic-spawn/: Cargo.toml  Dockerfile
images/lunatic-spawn/src/: main.rs
images/lunatic-submillisecond/: Cargo.toml  Dockerfile
images/lunatic-submillisecond/src/: main.rs
images/lunatic/src/: main.rs
images/slight/: Cargo.toml  Dockerfile  http-handler.wit  http-server-export.wit  http-server.wit  http-types.wit  http.wit  keyvalue.wit  kv.wit  resources.wit  slightfile.toml  types.wit
images/slight/src/: lib.rs  main.rs
images/spin/: Cargo.toml  Dockerfile  spin.toml
images/spin-dapr/: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy.yaml  spin.toml
images/spin-dapr/src/: lib.rs
images/spin-inbound-redis/: Cargo.toml  Dockerfile  spin.toml
images/spin-inbound-redis/src/: lib.rs
images/spin-keyvalue/: Cargo.toml  Dockerfile  runtime-config.toml  spin.toml  user_data.db
images/spin-keyvalue/src/: lib.rs
images/spin-outbound-redis/: Cargo.toml  Dockerfile  spin.toml  spin_outbound_redis.wasm
images/spin-outbound-redis/src/: lib.rs
images/spin/go-hello/: go.mod  main.go
images/spin/src/: lib.rs
images/spin_dotnet/: Dockerfile  Handler.cs  Project.csproj  spin.toml
images/wws/: Dockerfile
images/wws-python/: Dockerfile  hello.py
proposals/: 2022-09-14-kubernetes-versioning.md
scripts/: check-bins.sh  down.sh  move-bins.sh  pod-status-check.sh  up.sh  workloads.sh
staging/: spin.json  spin.toml
tests/: Cargo.toml  README.md  integration_test.rs  setup.py  teardown.py
tests/common/: mod.rs
tests/src/: integration_test.rs  lib.rs
tests/workloads/: redis-conf.yaml  redis-pod.yaml  runtime.yaml  spin-runtime-config.yaml  workload.yaml
utils/: Cargo.toml
utils/src/: lib.rs
