[package]
name = "containerd-wasm-shims-tests"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.75.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
http = "0.2"
tower = "0.4"
hyper = "0.14"
curl = "0.4"
rand = "0.8"