[package]
name = "containerd-shim-lunatic-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = "0.5.0"
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "4d212b968d24d42a27952e8b04979382b543a613", features = ["cgroupsv2"] }
libcontainer = { git = "https://github.com/containers/youki", rev = "09e67372a892f22a89eeef62ff429c3cbcac6d41", features = ["v1","v2"], default-features = false }
nix = "0.26.2"
serde = "1.0.183"
serde_json = "1.0.104"
thiserror = "1.0.44"
log = "~0.4"
libc = "0.2.147"
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["std"] }
lunatic-process = { git = "https://github.com/lunatic-solutions/lunatic", tag = "v0.13.2"}
lunatic-process-api = { git = "https://github.com/lunatic-solutions/lunatic", tag = "v0.13.2"}
lunatic-distributed = { git = "https://github.com/lunatic-solutions/lunatic", tag = "v0.13.2"}
lunatic-runtime = { git = "https://github.com/lunatic-solutions/lunatic", tag = "v0.13.2"}
clap = { version = "4.0", features = ["cargo", "derive"] }
tokio = "1.30.0"
oci-spec = "0.6.2"


# https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837
openssl = { version = "0.10", features = ["vendored"] }

[workspace]