[package]
name = "containerd-shim-slight-v1"
version = "0.9.1"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Slight workloads.
"""

[dependencies]
chrono = "0.4"
clap = { version = "4.1", features = ["derive", "env"] }
containerd-shim = "0.5.0"
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "4d212b968d24d42a27952e8b04979382b543a613", features = ["cgroupsv2"] }
libcontainer = { git = "https://github.com/containers/youki", rev = "09e67372a892f22a89eeef62ff429c3cbcac6d41", features = ["v1","v2"], default-features = false }
log = "0.4"
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "codec" ]}
wasmtime = "10.0"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
slight = { git = "https://github.com/deislabs/spiderlightning", version = "0.5.1" }
openssl = { version = "0.10", features = ["vendored"] }
oci-spec = "0.6.2"
libc = "0.2.147"
nix = "0.26.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dependencies.openssl-sys]
features = ["vendored"]

[dependencies.isahc]
version = "1.7"

[dependencies.curl]
features = ["zlib-ng-compat"]

[workspace]