[package]
name = "containerd-shim-slight-v1"
version = "0.9.2"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Slight workloads.
"""

[dependencies]
containerd-shim-wasm = "0.4.0"
log = "0.4"
tokio = { version = "1", features = [ "full" ] }
slight = { git = "https://github.com/deislabs/spiderlightning", version = "0.5.1" }
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
isahc = "1.7"

[dependencies.openssl-sys]
features = ["vendored"]

[dependencies.curl]
features = ["zlib-ng-compat"]

[workspace]