[package]
name = "containerd-shim-spin-v1"
version = "0.9.2"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "5a0a47a9ad79f7ae19153897486b8621c8d6a58e" }
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-redis-engine = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }
wasmtime = "10.0.1"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"

[workspace]
