[package]
name = "containerd-shim-spin-v1"
version = "0.9.1"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim = "0.6.0"
containerd-shim-wasm =  "0.4.0"
log = "0.4"
spin-trigger = { git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
spin-trigger-http = { git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
spin-redis-engine ={ git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
spin-manifest = { git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
spin-loader = { git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
spin-app = { git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
spin-oci = { git = "https://github.com/jsturtevant/spin", rev = "1856ba8971f93beae5fe1f8e2e0961d7ad50d493" }
wasmtime = "10.0.1"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
oci-spec = { version = "0.6.1", features = ["runtime"] }

