[package]
name = "containerd-shim-spin-v1"
version = "0.9.1"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim = "0.6.0"
containerd-shim-wasm =  { git = "https://github.com/containerd/runwasi", tag = "containerd-shim-wasm/v0.4.0" }
log = "0.4"
spin-trigger = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-trigger-http = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-redis-engine ={ git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-manifest = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-loader = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-app = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-oci = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
spin-core = { git = "https://github.com/vdice/spin", rev = "464214bbc0335d64ec12c67a30ee0cd4967a3370" }
wasmtime = "10.0.1"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
oci-spec = { version = "0.6.1", features = ["runtime"] }

