[package]
name = "containerd-shim-spin-v2"
version = "0.9.2"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { git = "https://github.com/mossaka/runwasi", rev = "25ff925e9b2c50d1d72b79a3003b381a599c0b65" }
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-redis-engine = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-oci = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
spin-common = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }
wasmtime = "14.0.4"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"


[workspace]
