[package]
name = "containerd-shim-spin-v2"
version = "0.9.3"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "c768e5b0919ca02903a301bf82a390489437dabe" }
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-redis-engine = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-oci = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
spin-common = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
wasmtime = "14.0.4"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
oci-spec = { version = "0.6.3" }

[workspace]
