[package]
name = "containerd-shim-spin-v2"
version = "0.10.0"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "c768e5b0919ca02903a301bf82a390489437dabe" }
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-redis-engine = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
trigger-sqs = { git = "https://github.com/fermyon/spin-trigger-sqs", rev = "f60545012bc153071d8005d1b8ed117a614dce0b" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-oci = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
spin-common = { git = "https://github.com/fermyon/spin", tag = "v2.1.0" }
wasmtime = "15.0.0"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
oci-spec = { version = "0.6.3" }

[workspace]
