[package]
name = "containerd-shim-wws-v1"
version = "0.9.0"
authors = ["Wasm Labs team <wasmlabs@vmware.com>"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Wasm Workers Server workloads.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
containerd-shim-wasm = { git = "https://github.com/jprendes/runwasi", rev = "440293d4f3f66a39b93452376880ceea18afcad8", features = [ "tokio" ] }
log = "0.4"

wasm-workers-server = { git = "https://github.com/vmware-labs/wasm-workers-server", tag = "v1.5.0" }

openssl = { version = "*", features = ["vendored"] } # https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837

[workspace]