[package]
name = "containerd-shim-wws-v1"
version = "0.9.2"
authors = ["Wasm Labs team <wasmlabs@vmware.com>"]
edition = "2021"
repository = 'https://github.com/deislabs/containerd-wasm-shims'
license = "Apache-2.0"
homepage = 'https://github.com/deislabs/containerd-wasm-shims'
description = """
Containerd shim for running Wasm Workers Server workloads.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
containerd-shim-wasm = "0.4.0"
wasm-workers-server = { git = "https://github.com/vmware-labs/wasm-workers-server", tag = "v1.7.0" }
log = "0.4"
tokio = { version = "1", features = [ "full" ] }

[patch.crates-io]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", tag = "v3.2.0" }
protobuf-codegen = { git = "https://github.com/stepancheg/rust-protobuf", tag = "v3.2.0" }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.48", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "=0.10.48", features = ["vendored"] }

[workspace]