[package]
name = "containerd-wasm-shims-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
kube = { version = "0.87", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.20", features = ["v1_25"] }
curl = { version = "0.4", features = ["static-curl"]}
rand = "0.8"
tokio = { version = "1", features = ["rt", "macros", "process"] }


[dev-dependencies]
http = "0.2"
tower = "0.4"
hyper = "0.14"
