[package]
name = "spin-dapr"
authors = ["Sven Pfennig <s.pfennig@reply.de>"]
description = "Example application to use Dapr with Spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }

[workspace]
