[package]
name = "spin-inbound-redis"
version = "0.1.0"
authors = ["Suneet Nangia <suneetnangia@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2" 
# Do not change spin sdk version without testing the e2e.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.3.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]

[profile.release]
strip = true