[package]
name = "spin-inbound-redis"
version = "0.9.3"
authors = ["Suneet Nangia <suneetnangia@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2" 
# Do not change spin sdk version without testing the e2e.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]

[profile.release]
strip = true