[package]
name = "spin-outbound-redis"
version = "0.8.0"
authors = ["DeisLabs Engineering Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]

[profile.release]
strip = true