[package]
name = "spin-outbound-redis"
version = "0.9.3"
authors = ["DeisLabs Engineering Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.0" }

[workspace]

[profile.release]
strip = true