[package]
name = "spin-rust-hello"
version = "0.1.0"
authors = ["DeisLabs Engineering Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", rev = "c86f027cb72f4b59b4f30cc7971950de69245f87" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "dde4694aaa6acf9370206527a798ac4ba6a8c5b8" }

[workspace]
