[package]
name = "spin-rust-hello"
version = "0.9.0"
authors = ["DeisLabs Engineering Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2" 
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]

[profile.release]
strip = true